--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,5 +9,5 @@ services:
     volumes:
       - .:/app
     environment:
-      - FLASK_APP=app:app
+      - FLASK_APP=app.app:app
       - FLASK_ENV=development
