--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,24 @@
-﻿blinker==1.9.0
+blinker==1.9.0
 certifi==2025.1.31
 charset-normalizer==3.4.1
 click==8.1.8
 colorama==0.4.6
 Flask==3.1.0
+Flask-JWT-Extended==4.7.1
+Flask-SQLAlchemy==3.1.1
+greenlet==3.2.1
+gunicorn==23.0.0 # NOVO
 idna==3.10
+iniconfig==2.1.0
 itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.2
+packaging==24.2
+pluggy==1.5.0
+PyJWT==2.10.1
+pytest==8.3.5
 requests==2.32.3
+SQLAlchemy==2.0.40
+typing_extensions==4.13.2
 urllib3==2.3.0
 Werkzeug==3.1.3
-Flask-JWT-Extended==4.4.4
-flask-restx==1.3.0
-flask_cors==3.0.10
-SQLalchemy==2.0.40
